--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "am",
+  "name": "am.js",
   "title": "AM",
   "description": "AM is a personal javascript library",
   "version": "0.0.0",
