--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,8 @@
 {
 	"directory": "bower_components",
-	"json": "bower.json"
+	"json": "bower.json",
+	"searchpath": [
+		"https://www.npmjs.org/package/am.js",
+		"https://github.com/adriancmiranda/am.js"
+	]
 }
