--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
   "homepage": "https://github.com/adriancmiranda/am.js",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.6.0",
-    "gulp-load-plugins": "^0.5.0",
-    "gulp-bump": "^0.1.7",
-    "gulp-clean": "^0.2.4",
-    "gulp-git": "^0.3.6",
-    "gulp-header": "^1.0.2",
-    "gulp-jshint": "^1.5.3",
-    "gulp-mocha": "^0.4.1",
-    "gulp-size": "^0.3.0",
-    "gulp-uglify": "^0.2.1",
-    "gulp-plumber": "^0.6.1",
-    "gulp-jscs": "^0.4.1",
-    "gulp-rename": "^1.2.0",
+    "gulp": "~3.6.0",
+    "gulp-load-plugins": "~0.5.0",
+    "gulp-bump": "~0.1.7",
+    "gulp-clean": "~0.2.4",
+    "gulp-git": "~0.3.6",
+    "gulp-header": "~1.0.2",
+    "gulp-jshint": "~1.5.3",
+    "gulp-mocha": "~0.4.1",
+    "gulp-size": "~0.3.0",
+    "gulp-uglify": "~0.2.1",
+    "gulp-plumber": "~0.6.1",
+    "gulp-jscs": "~0.4.1",
+    "gulp-rename": "~1.2.0",
     "gulp-jsonlint": "0.0.3",
-    "gulp-concat": "^2.2.0",
-    "gulp-remove-use-strict": "^0.0.2",
-    "gulp-notify": "^1.2.5"
+    "gulp-concat": "~2.2.0",
+    "gulp-remove-use-strict": "~0.0.2",
+    "gulp-notify": "~1.2.5"
   },
   "author": {
     "name": "Adrian C. Miranda",
